--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -2,16 +2,17 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>ACU</title>
+    <title>ACU-post</title>
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js">
     </script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/acu.css">
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body>
 <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <div class="searchBox">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -43,6 +44,34 @@
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
+
+    <div class="main" >
+        <div class="row">
+            <div class="col-md-9">
+            <h2><span class="glyphicon glyphicon-plus" aria-hidden="true">发帖</span></h2>
+            <hr>
+            <form action="/publish" method="post">
+                <div class="form-group">
+                    <label for="title">标题</label>
+                    <input type="email" class="form-control" id="title" name="title" placeholder="输入标题">
+                </div>
+                <div class="form-group">
+                    <label for="content">发布内容</label>
+                    <textarea class="form-control" id="content" name="content" placeholder="" rows="10"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputFile">附件</label>
+                    <input type="file" id="exampleInputFile">
+                    <p class="help-block">Example block-level help text here.</p>
+                </div>
+                <button type="submit" class="btn btn-success">提交</button>
+            </form>
+            </div>
+            <div class="col-md-3">
+                填充内容
+            </div>
+        </div>
+    </div>
 </nav>
 </body>
 </html>
