--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -7,7 +7,7 @@
     </script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/acu.css">
+    <link rel="stylesheet" href="css/publish.css">
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body>
@@ -53,7 +53,7 @@
             <form action="/publish" method="post">
                 <div class="form-group">
                     <label for="title">标题</label>
-                    <input type="email" class="form-control" id="title" name="title" placeholder="输入标题">
+                    <input type="text" class="form-control" id="title" name="title" placeholder="输入标题">
                 </div>
                 <div class="form-group">
                     <label for="content">发布内容</label>
