--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>ACU</title>
+    <title>profile</title>
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js">
     </script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -11,9 +11,22 @@
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body>
-<div th:insert="navigation :: nav"></div>
+<div th:insert="navigation::nav"></div>
 <div class="main">
     <div class="row">
+        <div class="col-md-3">
+            <h2><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true">热门话题</span></h2>
+            <hr>
+            <div class="list-group">
+                <a href="#" class="list-group-item active">
+                    Cras justo odio
+                </a>
+                <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
+                <a href="#" class="list-group-item">Morbi leo risus</a>
+                <a href="#" class="list-group-item">Porta ac consectetur ac</a>
+                <a href="#" class="list-group-item">Vestibulum at eros</a>
+            </div>
+        </div>
         <div class="col-md-9">
             <h2><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true">帖子</span></h2>
             <hr>
@@ -62,23 +75,17 @@
             <div class="pageJump">
                 <form th:action="@{/toMyPage(myPage=${myPage})}" >
                     <div class="a" style="width: 30px;height: 60px">
-                    <input type="text" name="myPage" style="width:30px;height: 20px" th:value="${page}">
+                        <input type="text" name="myPage" style="width:30px;height: 20px" th:value="${page}">
                     </div>
                     <div class="b" th:text="'/'+${messageDTOList1[0].getTotal_page()}+页"></div>
                     <div class="c">
-                    <input type="submit" class="btn-success" th:value="跳转">
+                        <input type="submit" class="btn-success" th:value="跳转">
                     </div>
 
                 </form>
             </div>
         </div>
-        <div class="col-md-3">
-            <h2><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true">热门话题</span></h2>
-            <hr>
-        </div>
     </div>
 </div>
-
-
 </body>
 </html>
