--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -37,7 +37,7 @@
 
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">消息中心</a></li>
+                        <li><a href="/profile/question">消息中心</a></li>
                         <li><a href="#">个人资料</a></li>
                         <li><a href="#">退出登录</a></li>
                     </ul>
