--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -36,10 +36,11 @@
             </form>
             </div>
             <div class="col-md-3">
-                填充内容
+                <h2><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true">热门话题</span></h2>
+                <hr>
             </div>
         </div>
     </div>
-</nav>
+
 </body>
 </html>
